# track-face-with-mtcnn

./: .gitignore  CMakeLists.txt  main.cpp
mtcnn/: mtcnn.cpp  mtcnn.h  network.h
